What's changed in loggerhead?
=============================

dev [future]

    - Added --port, --host and --prefix options to serve-branches
      script. (Martin Albisetti)

    - Fixed broken template for project browsing with start-loggerhead
      (Martin Albisett)

1.6 [15Aug2008]
----------------

    - Download a diffs between revisions. (Martin Albisetti)

    - Modified templates to make loggerhead's theme easier to
      change. (Paul Hummer)

    - Default sqlite interface is now sqlite3. (Robert Collins)

    - New ninja theme sponsored by Canonical (Martin Albisetti)

    - Added COPYING file and clarified copyright headers (John Arbash Meinel)

    - Remove the .py extension requiered by the Debian Policy.
      (Jelmer Vernooij)

    - New startup script serve-branches will serve Loggerhead without
      the need of configuration, and allow you to browse through directories
      and branches. (Michael Hudson)

    - Loggerhead is no longer a TurboGears application, but rather a
      WSGI application built using Paste (see http://wsgi.org/ and
      http://pythonpaste.org/ for more about WSGI and Paste).

    - URLs now use revision numbers instead of revision ids (Martin Albisetti)

    - The scripts no longer insist on Python 2.4 -- loggerhead works
      fine with 2.5.

    - Bazaar as of version 1.5 has improved in performance enough that
      the revision cache no longer gave any noticeable benefit, so it
      was removed (the files-changed cache is still useful).

    - The templates were rewritten in Zope's TAL markup, powered by
      the simpleTAL library -- improving both the performance and
      memory consumption of rendering by a factor of around 3 for
      large pages over the old Kid templates.

    - Loggerhead's poorly performing text index was disabled. bzr-search
      is now used if the plugin is installed and a text index is present
      on the branch being viewed. (Martin Albisetti, Robert Collins).
