@@ -21,6 +21,9 @@ Serve user directories as ~user.
 \fB\-\-trunk\-dir\fR=\fIDIR\fR
 The directory that contains the trunk branches.
 .TP
+\fB\-\-reload\fR
+Restarts the application when changing python files. Only used for development purposes.
+.TP
 \fB\-\-version\fR
 Print the software version and exit
 .SH "LICENSE"
